<resources>
    <string name="app_name">UTT QLSV</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment e</string>
    <string name="username_label">Username</string>
    <string name="username_hint">account username</string>
    <string name="password_label">Password</string>
    <string name="password_hint">password here</string>
    <string name="login">Login</string>
    <string name="sign_up_text_btn">Don\'t have an account? Sign up!</string>
    <string name="re_password_label">Re-password</string>
    <string name="email_label">Email</string>
    <string name="email_hint">abcd1@gmail.com</string>
    <string name="phone_number_label">Phone Number</string>
    <string name="phone_number_hint">0987654321</string>
    <string name="address_hint">Address Here</string>
    <string name="sign_up">Sign up</string>
    <string name="gender_label">Gender</string>
    <string name="add">Add</string>
    <string name="full_name">Full name</string>
    <string name="student_name_hint">Name here</string>
    <string name="student_code">Student code</string>
    <string name="student_code_hint">Student Code Here</string>
    <string name="class_name_hint">Class Name Here</string>
    <string name="class_name">Class</string>
    <string name="grade">Grade</string>
    <string name="grade_hint">Grade here</string>
    <string name="address">Address</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="save">Save</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="math">Math</string>
    <string name="math_score">Math score</string>
    <string name="literature_score">Literature score</string>
    <string name="english_score">English score</string>
    <string name="physic_score">Physic score</string>
    <string name="chemistry_score">Chemistry score</string>
    <string name="history_score">History score</string>
    <string name="geography_score">Geography score</string>
    <string name="biology_score">Biology score</string>
    <string name="student_name">Student name</string>
    <string name="gender">Gender</string>
    <string name="date_of_birth">Date of birth</string>
    <string name="student_list">Student List</string>
    <string name="student">STUDENT</string>
    <string name="logout">Logout</string>
    <string name="register">Register</string>
    <string name="add_student">Add Student</string>
    <string name="edit_student">Edit\nStudent</string>
    <string name="confirm">Confirm</string>
    <string name="average_score">Average Score</string>
    <string name="subject">Subject</string>
    <string name="score">Score</string>
    <string name="student_information">Student Information</string>
    <string name="biology">Biology</string>
    <string name="geography">Geography</string>
    <string name="history">History</string>
    <string name="chemistry">Chemistry</string>
    <string name="physic">Physic</string>
    <string name="english">English</string>
    <string name="literature">Literature</string>
</resources>