<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/sign_up_screen_background"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".view.activities.SignUp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="32dp"
        android:layout_marginRight="32dp">

        <TextView
            android:id="@+id/username_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:text="@string/username_label" />

        <EditText
            android:id="@+id/username_edt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/username_label"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:hint="@string/username_hint"
            android:inputType="text" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="32dp"
        android:layout_marginTop="16dp"
        android:layout_marginRight="32dp">

        <TextView
            android:id="@+id/password_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:text="@string/password_label" />

        <EditText
            android:id="@+id/password_edt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/password_label"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:hint="@string/password_hint"
            android:inputType="textPassword"
            android:password="true" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="32dp"
        android:layout_marginTop="16dp"
        android:layout_marginRight="32dp">

        <TextView
            android:id="@+id/re_password_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:text="@string/re_password_label" />

        <EditText
            android:id="@+id/re_password_edt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/re_password_label"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:hint="@string/password_hint"
            android:inputType="textPassword"
            android:password="true" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="32dp"
        android:layout_marginTop="16dp"
        android:layout_marginRight="32dp">

        <TextView
            android:id="@+id/gender_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:text="@string/gender_label" />

        <Spinner
            android:id="@+id/gender_spinner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@id/gender_label"
            android:layout_toEndOf="@id/gender_label"
            android:spinnerMode="dialog"/>
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="32dp"
        android:layout_marginRight="32dp">

        <TextView
            android:id="@+id/email_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:text="@string/email_label" />

        <EditText
            android:id="@+id/email_edt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/email_label"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:hint="@string/email_hint"
            android:inputType="textEmailAddress" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="32dp"
        android:layout_marginRight="32dp">

        <TextView
            android:id="@+id/phone_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:text="@string/phone_number_label" />

        <EditText
            android:id="@+id/phone_edt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/phone_label"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:hint="@string/phone_number_hint"
            android:inputType="phone" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="32dp"
        android:layout_marginRight="32dp">

        <TextView
            android:id="@+id/address_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:text="@string/phone_number_label" />

        <EditText
            android:id="@+id/address_edt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/address_label"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:hint="@string/address_hint"
            android:inputType="textPostalAddress" />
    </RelativeLayout>

    <Button
        android:id="@+id/sign_up_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sign_up" />
</androidx.appcompat.widget.LinearLayoutCompat>